[gd_scene load_steps=2 format=3 uid="uid://da60mmlok38fq"]

[ext_resource type="Script" path="res://src/scenes/campaign/components/CampaignDashboard.gd" id="1_ubhx7"]

[node name="CampaignDashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubhx7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PhaseLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Current Phase"

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Credits: 0"

[node name="StoryPointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Story Points: 0"

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CrewPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/CrewPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CrewLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/CrewPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Crew"

[node name="CrewList" type="ItemList" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/CrewPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
auto_height = true

[node name="ShipPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/ShipPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ShipLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/ShipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ship"

[node name="ShipInfo" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/ShipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Ship Info"
autowrap_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 10

[node name="QuestPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/QuestPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="QuestLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/QuestPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Current Quest"

[node name="QuestInfo" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/QuestPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quest Info"
autowrap_mode = 2

[node name="WorldPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/WorldPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="WorldLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/WorldPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Current World"

[node name="WorldInfo" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/WorldPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "World Info"
autowrap_mode = 2

[node name="PatronPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/PatronPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PatronLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/PatronPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Patrons"

[node name="PatronList" type="ItemList" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/PatronPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
auto_height = true

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ActionButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Next Phase"

[node name="ManageCrewButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Manage Crew"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Save Game"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Load Game"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quit" 